cf_analysis_results/checkerframework_3.42.0_results/urlcdd0c1ab49_emiln_JHouseFireExplorer_tgz-pJ8-dk_brics_automaton_DatatypesJ8.txt
../dataset/june2020_dataset/urlcdd0c1ab49_emiln_JHouseFireExplorer_tgz-pJ8-dk_brics_automaton_DatatypesJ8/src/Util.java:26: error: (required.method.not.called) $$ 4 $$ method close $$ fw $$ java.io.FileWriter $$ possible exceptional exit due to bw.write(text) with exception type java.io.IOException $$ ( 784, 821 ) $$ @MustCall method close may not have been invoked on fw or any of its aliases.
            FileWriter fw = new FileWriter(path);
                       ^
  The type of object is: java.io.FileWriter.
  Reason for going out of scope: possible exceptional exit due to bw.write(text) with exception type java.io.IOException
../dataset/june2020_dataset/urlcdd0c1ab49_emiln_JHouseFireExplorer_tgz-pJ8-dk_brics_automaton_DatatypesJ8/src/Util.java:67: error: (required.method.not.called) $$ 4 $$ method close $$ fis $$ java.io.FileInputStream $$ possible exceptional exit due to buf.readLine() with exception type java.io.IOException $$ ( 2158, 2189 ) $$ @MustCall method close may not have been invoked on fis or any of its aliases.
            fis = new FileInputStream(path);
                ^
  The type of object is: java.io.FileInputStream.
  Reason for going out of scope: possible exceptional exit due to buf.readLine() with exception type java.io.IOException
../dataset/june2020_dataset/urlcdd0c1ab49_emiln_JHouseFireExplorer_tgz-pJ8-dk_brics_automaton_DatatypesJ8/src/dk/brics/automaton/Automaton.java:679: error: (required.method.not.called) $$ 4 $$ method close $$ url.openStream() $$ java.io.InputStream $$ possible exceptional exit due to load(url.openStream()) with exception type java.io.IOException $$ ( 19906, 19922 ) $$ @MustCall method close may not have been invoked on url.openStream() or any of its aliases.
		return load(url.openStream());
		                          ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: possible exceptional exit due to load(url.openStream()) with exception type java.io.IOException
../dataset/june2020_dataset/urlcdd0c1ab49_emiln_JHouseFireExplorer_tgz-pJ8-dk_brics_automaton_DatatypesJ8/src/dk/brics/automaton/RunAutomaton.java:165: error: (required.method.not.called) $$ 4 $$ method close $$ url.openStream() $$ java.io.InputStream $$ possible exceptional exit due to load(url.openStream()) with exception type java.io.IOException $$ ( 5171, 5187 ) $$ @MustCall method close may not have been invoked on url.openStream() or any of its aliases.
		return load(url.openStream());
		                          ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: possible exceptional exit due to load(url.openStream()) with exception type java.io.IOException
../dataset/june2020_dataset/urlcdd0c1ab49_emiln_JHouseFireExplorer_tgz-pJ8-dk_brics_automaton_DatatypesJ8/src/dk/brics/automaton/Datatypes.java:470: error: (required.method.not.called) $$ 4 $$ method close $$ url.openStream() $$ java.io.InputStream $$ possible exceptional exit due to Automaton.load(url.openStream()) with exception type java.io.IOException $$ ( 34723, 34739 ) $$ @MustCall method close may not have been invoked on url.openStream() or any of its aliases.
			return Automaton.load(url.openStream());
			                                    ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: possible exceptional exit due to Automaton.load(url.openStream()) with exception type java.io.IOException
../dataset/june2020_dataset/urlcdd0c1ab49_emiln_JHouseFireExplorer_tgz-pJ8-dk_brics_automaton_DatatypesJ8/src/dk/brics/automaton/Datatypes.java:485: error: (required.method.not.called) $$ 4 $$ method close $$ new FileOutputStream(dir + "/" + name + ".aut") $$ java.io.FileOutputStream $$ possible exceptional exit due to a.store((new FileOutputStream(dir + "/" + name + ".aut"))) with exception type java.io.IOException $$ ( 35077, 35124 ) $$ @MustCall method close may not have been invoked on new FileOutputStream(dir + "/" + name + ".aut") or any of its aliases.
			a.store((new FileOutputStream(dir + "/" + name + ".aut")));
			         ^
  The type of object is: java.io.FileOutputStream.
  Reason for going out of scope: possible exceptional exit due to a.store((new FileOutputStream(dir + "/" + name + ".aut"))) with exception type java.io.IOException
../dataset/june2020_dataset/urlcdd0c1ab49_emiln_JHouseFireExplorer_tgz-pJ8-dk_brics_automaton_DatatypesJ8/src/dk/brics/automaton/Datatypes.java:795: error: (required.method.not.called) $$ 4 $$ method close $$ new FileReader("src/Unicode.txt") $$ java.io.FileReader $$ possible exceptional exit due to st.nextToken() with exception type java.io.IOException $$ ( 54457, 54490 ) $$ @MustCall method close may not have been invoked on new FileReader("src/Unicode.txt") or any of its aliases.
			StreamTokenizer st = new StreamTokenizer(new BufferedReader(new FileReader("src/Unicode.txt")));
			                                                            ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to st.nextToken() with exception type java.io.IOException
7 errors
